# rust-shop

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
entity/: Cargo.toml
entity/src/: carts.rs  customers.rs  lib.rs  mod.rs  order_items.rs  order_status.rs  orders.rs  prelude.rs  products.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20241205_000001_create_products_table.rs  m20241205_000002_add_products_to_table.rs  m20241206_000001_create_customers_table.rs  m20241210_000001_create_carts_table.rs  m20241210_000002_add_unique_constraint_to_carts.rs  m20241210_000003_create_orders_table.rs  m20241211_000001_create_order_items_table.rs
src/: api_error.rs  auth_utils.rs  db.rs  jwt_middleware.rs  main.rs
src/handlers/: auth.rs  cart.rs  mod.rs  order.rs  products.rs
