[package]
name = "shop_app"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration", "entity"]

[dependencies]
actix-web = "4.9.0"
chrono = "0.4.38"
dotenvy = "0.15.7"
sea-orm = { version = "1.1.2", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.215", features = [] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
validator = "0.19.0"

migration = { path = "migration" } # depends on your needs
entity = { path = "entity" }
bcrypt = "0.16.0"
jsonwebtoken = "9.3.0"
futures = "0.3.31"
